--- a/home_page.html
+++ b/home_page.html
@@ -14,42 +14,53 @@
     <!-- Flaticon END -->
 </head>
 
-<div class="sidenav">
+<!-- <div class="sidenav">
     <a class="active" href="home_page.html"><i class="fa fa-home"></i> home</a>
     <a href="notes_page.html"><i class="fa fa-tv"></i> notes</a>
-    <a href="music_page.html"><i class="fa fa-music"></i> music</a>
-</div>
+</div> -->
 
 <body onload="startTime()">
-    <div id="display_date" style="font-size: 150%;"></div>
-    <div id="display_time" style="font-size: 150%;"></div>
-    <p> hello world... </p>
-    <table align="center">
-        <thead>
-            <tr style="font-size: 90%;">
-                <th style="color: #37B0DC;"> work </th>
-                <th style="color: #DC3768;"> social </th>
-                <th style="color: #DCBB37;"> chill </th>
-            </tr>
-        </thead>
-        <tbody style = "font-size: 75%; color: white;">
-            <tr>
-                <th class="tbody1"><a target="_blank" href="https://canvas.vt.edu/">canvas</a></th>
-                <th class="tbody2"><a target="_blank" href="https://www.facebook.com/">facebook</a></th>
-                <th class="tbody3"><a target="_blank" href="https://www.youtube.com/feed/subscriptions">youtube</a></th>
-            </tr>
-            <tr>
-                <th class="tbody4"><a target="_blank" href="https://banweb.banner.vt.edu/ssb/prod/twbkwbis.P_WWWLogin">hokiespa</a></th>
-                <th class="tbody5"><a target="_blank" href="https://www.instagram.com/">instagram</a></th>
-                <th class="tbody6"><a target="_blank" href="https://www.netflix.com/">netflix</a></th>
-            </tr>
-            <tr>
-                <th class="tbody7"><a target="_blank" href="https://pharos.lib.vt.edu/myprintcenter/">print</a></th>
-                <th class="tbody8"><a target="_blank" href="https://www.messenger.com/">messenger</a></th>
-                <th class="tbody9"><a target="_blank" href="https://open.spotify.com/">spotify</a></th>
-            </tr>
-        </tbody>
-    </table>
+
+    <div class = welcome>
+        <div id="display_date" style="font-size: 150%;"></div>
+        <div id="display_time" style="font-size: 150%;"></div>
+        <p> hello world... </p>
+    </div>
+
+    
+    <div class = "columns">
+
+        <div id = "panel1">
+            <ul class = "block">
+                <li id = "theader" style = "color: #37B0DC;">work</li>
+                <li id = "tbody1_1"><a target="_blank" href="https://canvas.vt.edu/">canvas</a></li>
+                <li id = "tbody1_2"><a target="_blank" href="http://www.hokiespa.vt.edu">hokiespa</a></li>
+                <li id = "tbody1_3"><a target="_blank" href="https://pharos.lib.vt.edu/myprintcenter/">print</a></li>
+            </ul>
+        </div>
+
+        <div id = "panel2">
+            <ul class = "block">
+                <li id = "theader" style = "color: #DC3768;">social</li>
+                <li id = "tbody2_1"><a target="_blank" href="https://www.facebook.com/">facebook</a></li>
+                <li id = "tbody2_2"><a target="_blank" href="https://www.instagram.com/">instagram</a></li>
+                <li id = "tbody2_3"><a target="_blank" href="https://www.messenger.com/">messenger</a></li>
+            </ul>
+        </div>
+
+        <div id = "panel3">
+            <ul class = "block">
+                <li id = "theader" style = "color: #DCBB37;">chill</li>
+                <li id = "tbody3_1"><a target="_blank" href="https://www.youtube.com/feed/subscriptions">youtube</a></li>
+                <li id = "tbody3_2"><a target="_blank" href="https://www.netflix.com/">netflix</a></li>
+                <li id = "tbody3_3"><a target="_blank" href="https://open.spotify.com/">spotify</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+
+
 </body>
 
 <footer>
