--- a/home_page.html
+++ b/home_page.html
@@ -9,15 +9,13 @@
     <link rel="stylesheet" type="text/css" href="css\buttons.css">
     <link rel="stylesheet" type="text/css" href="css\body.css">
     <link rel="stylesheet" type="text/css" href="css\home.css">
-    <!-- https://www.flaticon.com/ START -->
-    <link rel="shortcut icon" type="image/png" href="css\icons\cube.png">
-    <!-- Flaticon END -->
+
 </head>
 
-<!-- <div class="sidenav">
+<div class="sidenav">
     <a class="active" href="home_page.html"><i class="fa fa-home"></i> home</a>
     <a href="notes_page.html"><i class="fa fa-tv"></i> notes</a>
-</div> -->
+</div>
 
 <body onload="startTime()">
 
