--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>hello world...</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+    <link rel="stylesheet" type="text/css" href="css\toastr.css">
 
     <!-- https://www.w3schools.com/icons/bootstrap_icons_glyphicons.asp START -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Icons END -->
+    <link rel="stylesheet" type="text/css" href="css\icons.css">
     <link rel="stylesheet" type="text/css" href="css\style.css">
 
 </head>
@@ -71,7 +72,7 @@
 
         <div class="form-popup" id="formnotes">
             <form class="form-container">
-                <input type="hidden" id="id" placeholder="id" >
+                <input type="hidden" id="text_id" placeholder="text_id" >
                 <input type="text" id="subject" placeholder="subject" autocomplete="off">
                 <br>
                 <textarea rows="12" id="notes" cols="40" autocomplete="off" placeholder="type notes here..."></textarea>
